# attention-recreation

./: .gitignore  README.md  main.py  model.py  pyproject.toml  scratch_test.ipynb  tokenize_data.py
scratch/: analyse_data copy.ipynb  analyse_data.ipynb  layer_norm.py  nested_tensors.py  spacey.py  test_input_id_encoder.py  test_model.ipynb  test_model.py  test_notebook.ipynb  torch_tensors.py
src/attention_recreation/: model.py
transformer_notes/: notes.md
