[project]
name = "attention-recreation"
version = "0.1.0"
description = "A recreation of the attention is all you need mode. Just to revise the topic."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pip>=25.0.1",
    "spacy>=3.8.5",
    "torch>=2.6.0",
    "torchvision>=0.21.0",
]

[tool.uv.sources]
torch = [
    { index = "pytorch-cu124", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
torchvision = [
    { index = "pytorch-cu124", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true

[tool.ruff]
line-length = 130
extend-select = ["I"]
